Fixed word wrap property for added comments

--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -81,3 +81,6 @@
 .gridUserDetails{
   width:40% !important;
 }
+.addedComments{
+  word-break: break-all;
+}
